--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
       {
-        "src": "listen.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/listen.js"
+        "source": "/(.*)",
+        "destination": "/"
       }
     ]
   }
   
+
+
